@@ -1,21 +1,18 @@
 // Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.actions;
 
-import com.intellij.execution.configurations.GeneralCommandLine;
 import com.intellij.execution.process.CapturingProcessHandler;
 import com.intellij.execution.process.ProcessIOExecutorService;
-import com.intellij.execution.util.ExecUtil;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.lightEdit.LightEditCompatible;
 import com.intellij.idea.ActionsBundle;
 import com.intellij.jna.JnaLoader;
 import com.intellij.notification.Notification;
 import com.intellij.notification.NotificationListener;
+import com.intellij.notification.NotificationType;
 import com.intellij.openapi.actionSystem.*;
-import com.intellij.openapi.actionSystem.remoting.ActionRemoteBehavior;
 import com.intellij.openapi.actionSystem.remoting.ActionRemoteBehaviorSpecification;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.ex.util.EditorUtil;
 import com.intellij.openapi.project.DumbAwareAction;
 import com.intellij.openapi.project.Project;
@@ -40,7 +37,6 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.event.HyperlinkEvent;
-import java.awt.*;
 import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
@@ -48,15 +44,17 @@ import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Objects;
 import java.util.stream.Stream;
+
+import static java.util.Objects.requireNonNullElse;
+import static java.util.Objects.requireNonNullElseGet;
 
 /**
  * This helpful action opens a file or directory in a system file manager.
  *
  * @see ShowFilePathAction
  */
-public class RevealFileAction extends DumbAwareAction implements LightEditCompatible, ActionRemoteBehaviorSpecification {
+public class RevealFileAction extends DumbAwareAction implements LightEditCompatible, ActionRemoteBehaviorSpecification.Disabled {
   private static final Logger LOG = Logger.getInstance(RevealFileAction.class);
 
   public static final NotificationListener FILE_SELECTING_LISTENER = new NotificationListener.Adapter() {
@@ -81,12 +79,14 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
 
   @Override
   public void update(@NotNull AnActionEvent e) {
-    Editor editor = e.getData(CommonDataKeys.EDITOR);
-    e.getPresentation().setEnabledAndVisible(isSupported() && getFile(e) != null &&
-                                             (!ActionPlaces.isPopupPlace(e.getPlace()) ||
-                                              editor == null ||
-                                              !editor.getSelectionModel().hasSelection() ||
-                                              EditorUtil.contextMenuInvokedOutsideOfSelection(e)));
+    var editor = e.getData(CommonDataKeys.EDITOR);
+    e.getPresentation().setEnabledAndVisible(
+      isSupported() &&
+      getFile(e) != null &&
+      (!e.isFromContextMenu() ||
+       editor == null ||
+       !editor.getSelectionModel().hasSelection() ||
+       EditorUtil.contextMenuInvokedOutsideOfSelection(e)));
     e.getPresentation().setText(getActionName(e.getPlace()));
   }
 
@@ -103,19 +103,18 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
     }
   }
 
-  @NotNull
-  @Override
-  public ActionRemoteBehavior getBehavior() {
-    return ActionRemoteBehavior.Disabled;
-  }
-
   private static @Nullable VirtualFile getFile(AnActionEvent e) {
     return findLocalFile(e.getData(CommonDataKeys.VIRTUAL_FILE));
   }
 
+  /** Whether a system is able to open a directory in a file manager and highlight a file in it. */
   public static boolean isSupported() {
-    return SystemInfo.isWindows || SystemInfo.isMac || SystemInfo.hasXdgOpen() ||
-           Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.OPEN);
+    return SystemInfo.isWindows || SystemInfo.isMac || Holder.fileManagerApp != null;
+  }
+
+  /** Whether a system is able to open a directory in a file manager. */
+  public static boolean isDirectoryOpenSupported() {
+    return SystemInfo.isWindows || SystemInfo.isMac || Holder.fileManagerPresent;
   }
 
   public static @ActionText @NotNull String getActionName() {
@@ -149,7 +148,7 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
     return SystemInfo.isMac ? IdeBundle.message("action.finder.text") :
            SystemInfo.isWindows ? IdeBundle.message("action.explorer.text") :
            skipDetection ? IdeBundle.message("action.file.manager.text") :
-           Objects.requireNonNullElseGet(Holder.fileManagerName, () -> IdeBundle.message("action.file.manager.text"));
+           requireNonNullElseGet(Holder.fileManagerName, () -> IdeBundle.message("action.file.manager.text"));
   }
 
   public static @Nullable VirtualFile findLocalFile(@Nullable VirtualFile file) {
@@ -175,7 +174,7 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
    * (note that some platforms do not support the file highlighting).
    */
   public static void openFile(@NotNull Path file) {
-    Path parent = file.toAbsolutePath().getParent();
+    var parent = canonicalize(file).getParent();
     if (parent != null) {
       doOpen(parent, file);
     }
@@ -197,8 +196,8 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
   }
 
   private static void doOpen(@NotNull Path _dir, @Nullable Path _toSelect) {
-    String dir = _dir.toAbsolutePath().normalize().toString();
-    String toSelect = _toSelect != null ? _toSelect.toAbsolutePath().normalize().toString() : null;
+    var dir = canonicalize(_dir).normalize().toString();
+    var toSelect = _toSelect != null ? canonicalize(_toSelect).normalize().toString() : null;
     String fmApp;
 
     if (SystemInfo.isWindows) {
@@ -228,23 +227,13 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
         spawn(fmApp, toSelect != null ? toSelect : dir);
       }
     }
-    else if (SystemInfo.hasXdgOpen()) {
+    else if (toSelect == null && SystemInfo.hasXdgOpen()) {
       spawn("xdg-open", dir);
     }
-    else if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.OPEN)) {
-      if (LOG.isDebugEnabled()) LOG.debug("opening " + dir + " via Desktop API");
-      ProcessIOExecutorService.INSTANCE.execute(() -> {
-        try {
-          Desktop.getDesktop().open(new File(dir));
-        }
-        catch (Exception e) {
-          LOG.warn(e);
-        }
-      });
-    }
     else {
-      Messages.showErrorDialog(IdeBundle.message("message.this.action.isn.t.supported.on.the.current.platform"),
-                               IdeBundle.message("dialog.title.cannot.open.file"));
+      var message = IdeBundle.message("reveal.unsupported.message", requireNonNullElse(toSelect, dir));
+      new Notification("System Messages", message, NotificationType.WARNING)
+        .notify(null);
     }
   }
 
@@ -258,7 +247,7 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
         var res = Shell32.INSTANCE.ShellExecute(null, "explore", dir, null, null, WinUser.SW_NORMAL);
         if (res.intValue() <= 32) {
           LOG.warn("ShellExecute(" + dir + "): " + res.intValue() + " GetLastError=" + Kernel32.INSTANCE.GetLastError());
-          openViaExplorerCall(dir, toSelect);
+          openViaExplorerCall(dir, null);
         }
       }
       else {
@@ -280,6 +269,16 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
     });
   }
 
+  private static Path canonicalize(@NotNull Path path) {
+    try {
+      return path.toRealPath();
+    }
+    catch (IOException e) {
+      LOG.info("Could not convert " + path + " to canonical path", e);
+      return path.toAbsolutePath();
+    }
+  }
+
   private static void openViaExplorerCall(String dir, @Nullable String toSelect) {
     spawn(toSelect != null ? "explorer /select,\"" + toSelect + '"' : "explorer /root,\"" + dir + '"');
   }
@@ -297,16 +296,10 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
 
     ProcessIOExecutorService.INSTANCE.execute(() -> {
       try {
-        CapturingProcessHandler handler;
-        if (SystemInfo.isWindows) {
-          assert command.length == 1 : Arrays.toString(command);
-          Process process = Runtime.getRuntime().exec(command[0]);  // no quoting/escaping is needed
-          handler = new CapturingProcessHandler.Silent(process, null, command[0]);
-        }
-        else {
-          handler = new CapturingProcessHandler.Silent(new GeneralCommandLine(command));
-        }
-        handler.runProcess(10000, false).checkSuccess(LOG);
+        var process = SystemInfo.isWindows ? Runtime.getRuntime().exec(command[0]) : new ProcessBuilder(command).start();
+        new CapturingProcessHandler.Silent(process, null, command[0])
+          .runProcess(10000, false)
+          .checkSuccess(LOG);
       }
       catch (Exception e) {
         LOG.warn(e);
@@ -317,20 +310,23 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
   private static final class Holder {
     private static final String[] supportedFileManagers = {"nautilus", "pantheon-files", "dolphin", "dde-file-manager"};
 
+    private static final boolean fileManagerPresent;
     private static final @Nullable String fileManagerApp;
     private static final @Nullable @NlsSafe String fileManagerName;
 
     static {
+      boolean fmPresent = false;
       String fmApp = null, fmName = null;
       if (SystemInfo.hasXdgMime()) {
-        var desktopEntryName = ExecUtil.execAndReadLine(new GeneralCommandLine("xdg-mime", "query", "default", "inode/directory"));
-        if (desktopEntryName != null && desktopEntryName.endsWith(".desktop")) {
-          var desktopFile = Stream.of(getXdgDataDirectories().split(":"))
-            .map(dir -> Path.of(dir, "applications", desktopEntryName))
-            .filter(Files::exists)
-            .findFirst();
-          if (desktopFile.isPresent()) {
-            try {
+        try (var reader = new ProcessBuilder("xdg-mime", "query", "default", "inode/directory").start().inputReader()) {
+          var desktopEntryName = reader.readLine();
+          if (desktopEntryName != null && desktopEntryName.endsWith(".desktop")) {
+            var desktopFile = Stream.of(getXdgDataDirectories().split(":"))
+              .map(dir -> Path.of(dir, "applications", desktopEntryName))
+              .filter(Files::exists)
+              .findFirst();
+            if (desktopFile.isPresent()) {
+              fmPresent = true;
               var lines = Files.readAllLines(desktopFile.get());
               fmApp = lines.stream()
                 .filter(line -> line.startsWith("Exec="))
@@ -342,12 +338,13 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
                 .map(line -> line.substring(5))
                 .findFirst().orElse(null);
             }
-            catch (InvalidPathException | IOException e) {
-              LOG.error(e);
-            }
           }
         }
+        catch (Exception e) {
+          LOG.info(e);
+        }
       }
+      fileManagerPresent = fmPresent;
       fileManagerApp = fmApp;
       fileManagerName = fmName;
     }
