@@ -1,4 +1,4 @@
-// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.ui;
 
 import com.intellij.openapi.diagnostic.Logger;
@@ -39,6 +39,7 @@ public class Splitter extends JPanel implements Splittable {
   private final float myMaxProp;
 
 
+  @ApiStatus.Internal
   protected float myProportion;// first size divided by (first + second)
   private Float myLagProportion;
 
@@ -596,7 +597,7 @@ public class Splitter extends JPanel implements Splittable {
     proportion = MathUtil.clamp(proportion, myMinProp, myMaxProp);
     float oldProportion = myProportion;
     myProportion = proportion;
-    firePropertyChange(PROP_PROPORTION, new Float(oldProportion), new Float(myProportion));
+    firePropertyChange(PROP_PROPORTION, Float.valueOf(oldProportion), Float.valueOf(myProportion));
     revalidate();
     repaint();
   }
